# EigenJNI

./: CMakeLists.txt  README.md  dr_evomodel_substmodel_eigen_EigenJNIWrapper.cpp  dr_evomodel_substmodel_eigen_EigenJNIWrapper.h  main.cpp
java/: EigenJNIWrapper.java
